mainApp/main/default/objects/Planet__c/Planet__c.object-meta.xml
<CustomObject>
    <label>Planet</label>
    <nameField>
        <label>Planet Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Planets</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>