mainApp/main/default/objects/Planet__c/fields/Dominant_Life_Form__c.field-meta.xml
<CustomField>
    <fullName>Dominant_Life_Form__c</fullName>
    <label>Dominant Life Form</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Live_Forms</valueSetName>
    </valueSet>
</CustomField>