mainApp/main/default/objects/Planet__c/fields/Galaxy__c.field-meta.xml
<CustomField>
    <fullName>Galaxy__c</fullName>
    <label>Galaxy</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Milky Way</fullName>
            </value>
            <value>
                <fullName>Eye of Sauron</fullName>
            </value>
            <value>
                <fullName>Andromeda Galaxy</fullName>
            </value>
            <value>
                <fullName>Cigar Galaxy</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>