mainApp/main/default/objects/Planet__c/fields/Sub_Galaxy_Elements__c.field-meta.xml
<CustomField>
    <fullName>Sub_Galaxy_Elements__c</fullName>
    <label>Sub Galaxy Elements</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>Galaxy__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>East Milky Way</fullName>
            </value>
            <value>
                <fullName>North Milky Way</fullName>
            </value>
            <value>
                <fullName>Very Milky Way</fullName>
            </value>
            <value>
                <fullName>Hazelnut Milk Way</fullName>
            </value>
            <value>
                <fullName>Core Andromeda</fullName>
            </value>
            <value>
                <fullName>Android Andromeda</fullName>
            </value>
            <value>
                <fullName>Camel Andromedar</fullName>
            </value>
            <value>
                <fullName>Frodo Got It</fullName>
            </value>
            <value>
                <fullName>Frodo Brings It</fullName>
            </value>
            <value>
                <fullName>Frodo Drops It</fullName>
            </value>
            <value>
                <fullName>Vegueros</fullName>
            </value>
            <value>
                <fullName>Vega Fina</fullName>
            </value>
            <value>
                <fullName>Cohiba</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>