mainApp/main/default/objects/Planet__c/fields/Surface_Type__c.field-meta.xml
<CustomField>
    <fullName>Surface_Type__c</fullName>
    <label>Surface Types</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Blue Gas</fullName>
            </value>
            <value>
                <fullName>Green Gas</fullName>
            </value>
            <value>
                <fullName>Grey Gas</fullName>
            </value>
            <value>
                <fullName>Forest</fullName>
            </value>
            <value>
                <fullName>See</fullName>
            </value>
            <value>
                <fullName>Mountains</fullName>
            </value>
            <value>
                <fullName>Beach</fullName>
            </value>
            <value>
                <fullName>Red Rocks</fullName>
            </value>
            <value>
                <fullName>Grey Rocks</fullName>
            </value>
            <value>
                <fullName>White Rocks</fullName>
            </value>
            <value>
                <fullName>Shiny Rocks</fullName>
            </value>
            <value>
                <fullName>White Ice</fullName>
            </value>
            <value>
                <fullName>Whiter Ice</fullName>
            </value>
            <value>
                <fullName>Less White Ice</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>