mainApp/main/default/objects/Planet__c/recordTypes/Earth_Like.recordType-meta.xml
<RecordType>
    <fullName>Earth_Like</fullName>
    <active>true</active>
    <label>Earth Like</label>
</RecordType>