mainApp/main/default/objects/Planet__c/recordTypes/Gas_Giant.recordType-meta.xml
<RecordType>
    <fullName>Gas_Giant</fullName>
    <active>true</active>
    <label>Gas Giant</label>
</RecordType>