mainApp/main/default/objects/Planet__c/recordTypes/Ice_Desert.recordType-meta.xml
<RecordType>
    <fullName>Ice_Desert</fullName>
    <active>true</active>
    <label>Ice Desert</label>
</RecordType>