mainApp/main/default/objects/Planet__c/validationRules/No_Empty_Name_or_Galaxy.validationRule-meta.xml
<ValidationRule>
    <fullName>No_Empty_Name_or_Galaxy</fullName>
    <active>true</active>
    <errorConditionFormula>OR(
   /**
   * validation rules support comments. 
   * If you need to change something, 
   * you can just modify the comment
   **/
   ISBLANK( Name ) ,
   ISPICKVAL( Galaxy__c, &quot;&quot; ) 
)</errorConditionFormula>
    <errorMessage>Please provide at least a name and a galaxy for your new planet. Come on.</errorMessage>
</ValidationRule>