mainApp/main/default/objects/Planet__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Galaxy__c</columns>
    <columns>Sub_Galaxy_Elements__c</columns>
    <columns>Dominant_Life_Form__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Surface_Type__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>